--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NLW Rockseat</title>
+    <title>NLW - COPA/Calendário de jogos/</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="app">
+    <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="">
 
         </header>
 
-        <main id="cards">
+        <main class="card">
             <div class="cads">
                 <h2>24/11 <span>quinta</span></h2>
             </div>
