--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NLW - COPA/Calendário de jogos/</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -15,18 +18,22 @@
 
         </header>
 
-        <main class="card">
-            <div class="cads">
+        <main class="cards">
+            <div class="card">
                 <h2>24/11 <span>quinta</span></h2>
+                <ul>
+                    <li>
+                        <img src="./assets/icon-brazil.svg" alt="">
+                        <strong>08:00</strong>
+                        <img src="./assets/icon-cameroon.svg" alt="">
+                    </li>
+                    <li>
+                        <img src="./assets/icon-brazil.svg" alt="">
+                        <strong>08:00</strong>
+                        <img src="./assets/icon-cameroon.svg" alt="">
+                    </li>
+                </ul>
             </div>
-
-            <ul>
-                <li>
-                    <img src="./assets/icon-brazil.svg" alt="">
-                    <strong>08:00</strong>
-                    <img src="./assets/icon-cameroon.svg" alt="">
-                </li>
-            </ul>
         </main>
     </div>
 </body>
