--- a/index.html
+++ b/index.html
@@ -12,29 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="app">
-        <header>
-            <img src="./assets/logo.svg" alt="">
-
-        </header>
-
-        <main class="cards">
-            <div class="card">
-                <h2>24/11 <span>quinta</span></h2>
-                <ul>
-                    <li>
-                        <img src="./assets/icon-brazil.svg" alt="">
-                        <strong>08:00</strong>
-                        <img src="./assets/icon-cameroon.svg" alt="">
-                    </li>
-                    <li>
-                        <img src="./assets/icon-brazil.svg" alt="">
-                        <strong>08:00</strong>
-                        <img src="./assets/icon-cameroon.svg" alt="">
-                    </li>
-                </ul>
-            </div>
-        </main>
-    </div>
+    <div id="app"></div>
+    <script src="./main.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
