--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <header>
+            <img src="./assets/logo.svg" alt="">
+        </header>
+
+        <main id="cards"></main>
+    </div>
     <script src="./main.js"></script>
     <script src="./script.js"></script>
 </body>
