class 04/refactoring/colors/animation

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>NLW - COPA/Calendário de jogos/</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsividade.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="blue">
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="">
