--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./responsividade.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
-<body class="blue">
+<body class="">
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="">
